responsive.css
/* ----------------- MEDIA QUERIES ------------------ */

/* MOBILE LAYOUT: PORTRAIT */
@media only screen and (max-width: 600px) and (orientation: portrait) {
  .container {
    grid-template-columns: 1fr;
    grid-template-rows: 100px 240vh 100vh 190vh 60vh 80vh;
  }

  main {
    grid-area: main;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 80vh 100vh 1fr;
    grid-template-areas:
      "mainBanner"
      "contentBanners"
      "contentNumbers";
  }

  section {
    width: 100%;
  }

  footer {
    flex-direction: row;
    width: 100%;
  }

  #contentBanners,
  #contentNumbers,
  #newsContent,
  #referencesContent {
    flex-direction: column;
    width: 90%;
  }

  #clients,
  #employees,
  #dailyUsers {
    text-align: center;
    height: 30%;
  }

  .bannerImage {
    width: 100%;
    max-height: 200px;
    height: auto;
    object-fit: cover;
    border-radius: 10px;
  }
  .numbersIcon {
    float: left;
    margin: 2em;
    margin-right: 0;
    margin-left: 5em;
    scale: 70%;
  }

  .numbersShowcase p {
    text-align: left;
    margin-left: 0;
    font-size: 1rem;
  }

  .animatedNumber {
    font-size: 2.5rem !important;
    font-weight: 300;
    margin-top: 2rem;
  }

  .centeredText {
    top: 50%;
    font-size: 1.6rem;
    color: white;
  }

  #companyBanner,
  #productsBanner,
  #contactUsBanner {
    padding: 0;
  }

  #newsContent article {
    height: 40%;
    margin: 0;
    margin-top: 1em;
    margin-bottom: 1em;
  }

  .modalContent {
    margin: 40% auto;
    width: 80%;
    height: 40%;
  }

  .modalContent img {
    width: 150px;
    margin-bottom: 2rem;
  }

  #referencesContent div {
    height: 23%;
    border: lightgrey 1px solid;
  }
}

/* MOBILE LAYOUT LANDSCAPE */
@media only screen and (max-width: 955px) and (orientation: landscape) {
  .container {
    grid-template-columns: 1fr;
    grid-template-rows: 100px 200vh 100vh 200vh 80vh 80vh;
    grid-template-areas:
      "header"
      "main"
      "latestNews"
      "references"
      "newsletter"
      "footer";
  }

  main {
    grid-area: main;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 70vh 1fr 1fr;
    grid-template-areas:
      "mainBanner"
      "contentBanners"
      "contentNumbers";
  }

  h2 {
    margin-bottom: 0;
    margin-top: 0;
  }

  h3 {
    font-size: 1em;
  }

  section {
    width: 100% !important;
  }

  #contentNumbers,
  #contentBanners {
    display: flex;
    align-items: stretch;
    width: 90%;
    height: 100%;
    margin: auto;
  }

  .title h1 {
    font-size: 2rem;
  }

  #contentNumbers {
    display: flex;
    align-items: stretch;
    width: 80%;
    height: 80%;
    margin: auto;
  }

  .animatedNumber {
    font-size: 2rem;
  }

  .numberName {
    text-align: left;
    margin-left: 0;
    font-size: 1rem;
  }

  #newsContent {
    width: 100%;
  }

  #newsContent article {
    height: 80%;
  }

  #references {
    grid-template-rows: 80px 1fr;
  }

  #referencesContent {
    display: flex;
    width: 100%;
    flex-wrap: wrap;
    margin: auto;
    flex-direction: row;
  }

  #referencesContent div {
    flex: 0 0 40%;
    width: 20%;
    flex-wrap: wrap;
    height: 50%;
    margin: auto;
    margin-bottom: 1em;
    margin-top: 0;
    background-color: white;
    border: lightgrey 1px solid;
  }

  #mobileFooter {
    flex-direction: row;
  }

  .mobileFooterUp,
  .mobileFooterDown {
    width: 50%;
    margin: 0;
    margin-top: 2em;
  }
}

/* TABLET LAYOUT PORTRAIT */
@media only screen and (max-width: 950px) and (min-width: 601px) and (orientation: portrait) {
  .container {
    grid-template-columns: 1fr;
    grid-template-rows: 100px 90vh 40vh 90vh 50vh 40vh;
    grid-template-areas:
      "header"
      "main"
      "latestNews"
      "references"
      "newsletter"
      "footer";
  }

  main {
    grid-area: main;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 50vh 1fr 1fr;
    grid-template-areas:
      "mainBanner"
      "contentBanners"
      "contentNumbers";
  }

  #contentNumbers,
  #contentBanners {
    display: flex;
    align-items: stretch;
    width: 90%;
    height: 100%;
    margin: auto;
  }

  .animatedNumber {
    text-align: left;
    margin-left: 0;
    font-size: 1.5em;
  }

  .numberName {
    font-size: 0.5em;
  }

  #references {
    grid-template-rows: 80px 1fr;
  }

  #referencesContent {
    display: flex;
    width: 100%;
    flex-wrap: wrap;
    margin: auto;
    flex-direction: row;
  }

  #referencesContent div {
    flex: 0 0 40%;
    width: 20%;
    flex-wrap: wrap;
    height: 50%;
    margin: auto;
    margin-bottom: 1em;
    margin-top: 0;
    background-color: white;
    border: lightgrey 1px solid;
  }

  h3 {
    margin: 0.5em;
    margin-top: 0;
    font-size: 0.8em;
  }

  #mobileFooter {
    flex-direction: row;
  }

  .mobileFooterUp,
  .mobileFooterDown {
    width: 50%;
    margin: 0;
    margin-top: 2em;
  }
}

/* SMALLER DESKTOP/TABLET WINDOW */
@media only screen and (max-width: 1110px) and (min-width: 950px) {
  .animatedNumber {
    font-size: 2.3rem !important;
    font-weight: 300;
    margin-top: 2rem;
  }

  .modalContent {
    margin: 15% auto;
    width: 80%;
    height: 40%;
  }

  #mobileFooter {
    flex-direction: column;
  }

  .mobileFooterUp,
  .mobileFooterDown {
    width: 50%;
  }

  #referencesContent div {
    background-color: white;
    border: lightgrey 1px solid;
  }
}

/* DESKTOP OVER MAX WIDTH */
@media only screen and (min-width: 1400px) {
  .parallax {
    background-size: 1400px auto;
    background-position: center top;
  }

  .card {
    height: 90%;
  }
}

/* Quick and dirty fix for footer links */
@media only screen and (max-width: 1280px) {
  .footerRightUp ul li {
    display: inline-block;
    margin: 0.3rem;
    margin-top: 3rem;
    margin-right: 0;
    font-size: 0.8em;
  }
}

/* MEDIA QUERIES TO CHANGE BETWEEN HEADER NAV ELEMENTS */
@media only screen and (max-width: 954px) {
  #mobileHeader {
    display: inline;
  }

  #desktopHeader {
    display: none;
  }
}

@media only screen and (min-width: 955px) {
  #mobileHeader {
    display: none;
  }

  #desktopHeader {
    display: inline;
  }
}

/* MEDIA QUERIES TO CHANGE BETWEEN FOOTER ELEMENTS */
@media only screen and (max-width: 909px) {
  #mobileFooter {
    display: flex;
  }

  #desktopFooter {
    display: none;
  }
}

@media only screen and (min-width: 910px) {
  #mobileFooter {
    display: none;
  }

  #desktopFooter {
    display: flex;
  }
}

